objects/Lottery_Prize__c.object
<CustomObject>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lottery__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prize Payments</relationshipLabel>
        <relationshipName>Lottery_Prizes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <label>Number of Payments</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guaranteed</fullName>
                </value>
                <value>
                    <fullName>Life-contingent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Prize Payment</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Prize ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prize Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>